--- a/ClinicaVeterinaria/Views/Animali/Delete.cshtml
+++ b/ClinicaVeterinaria/Views/Animali/Delete.cshtml
@@ -4,78 +4,77 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Elimina</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Sei sicuro di voler eliminare questo animale?</h3>
 <div>
-    <h4>Animali</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Dataregistrazione)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.Dataregistrazione)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.NomeAnimale)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.NomeAnimale)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Tipologia)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.Tipologia)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ColoreMantello)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.ColoreMantello)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Datanascita)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.Datanascita)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.HasMicrochip)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.HasMicrochip)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.NumMicrochip)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.NumMicrochip)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FotoAnimale)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.FotoAnimale)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.HasProprietario)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.HasProprietario)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdUtenteNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.IdUtenteNavigation.IdUtente)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Idanimale" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Elimina" class="btn btn-danger" />
+        <a class="btn btn-outline-info me-2" asp-action="Index">Lista Animali</a>
     </form>
 </div>
