--- a/ClinicaVeterinaria/Views/Animali/Edit.cshtml
+++ b/ClinicaVeterinaria/Views/Animali/Edit.cshtml
@@ -4,19 +4,16 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Modifica Animale</h1>
 
-<h4>Animali</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-
-
         <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Idanimale" />
 
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="FotoAnimale" class="control-label"></label>
                 <div>
                     <img style="width:200px" src="~/images/animali/@Model.FotoAnimale" class="img-thumbnail" alt="...">
@@ -29,63 +26,58 @@
                 <span asp-validation-for="FotoAnimale" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Dataregistrazione" class="control-label"></label>
                 <input asp-for="Dataregistrazione" class="form-control" />
                 <span asp-validation-for="Dataregistrazione" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="NomeAnimale" class="control-label"></label>
                 <input asp-for="NomeAnimale" class="form-control" />
                 <span asp-validation-for="NomeAnimale" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Tipologia" class="control-label"></label>
                 <input asp-for="Tipologia" class="form-control" />
                 <span asp-validation-for="Tipologia" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="ColoreMantello" class="control-label"></label>
                 <input asp-for="ColoreMantello" class="form-control" />
                 <span asp-validation-for="ColoreMantello" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Datanascita" class="control-label"></label>
                 <input asp-for="Datanascita" class="form-control" />
                 <span asp-validation-for="Datanascita" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
+            <div class="form-group form-check mb-3">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="HasMicrochip" /> @Html.DisplayNameFor(model => model.HasMicrochip)
                 </label>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="NumMicrochip" class="control-label"></label>
                 <input asp-for="NumMicrochip" class="form-control" />
                 <span asp-validation-for="NumMicrochip" class="text-danger"></span>
             </div>
            
-            <div class="form-group form-check">
+            <div class="form-group form-check mb-3">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="HasProprietario" /> @Html.DisplayNameFor(model => model.HasProprietario)
                 </label>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="IdUtente" class="control-label"></label>
                 <select asp-for="IdUtente" class="form-control" asp-items="ViewBag.IdUtente"></select>
                 <span asp-validation-for="IdUtente" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group mb-3">
+                <input class="btn btn-info me-2" type="submit" value="Modifica" />
+                <a class="btn btn-outline-info" asp-action="Index">Lista Animali</a>
             </div>
         </form>
-
-
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
