--- a/ClinicaVeterinaria/Views/Animali/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Animali/Index.cshtml
@@ -4,44 +4,39 @@
 	ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
-<p>
-	<a asp-action="Create">Create New</a>
-</p>
-
+<div class="d-flex justify-content-between align-items-center mb-3">
+	<h1 class="mb-0">Lista Animali</h1>
+	<p class="mb-0">
+		<a asp-action="Create">Aggiungi Animale</a>
+	</p>
+</div>
 
 <div class="container">
 	<div class="row">
-		
-			@foreach (var item in Model)
-			{		<div class="col-4">	
-					<div class="card">
+		@foreach (var item in Model) {		
+			<div class="col-4">	
+				<div class="card">
 					<img src="../images/animali/@item.FotoAnimale" class="img-thumbnail imgDimensions" alt="...">
-						<div class="card-body">
-							<h5 class="card-title">@item.NomeAnimale</h5>
-							<p class="card-text">@item.Dataregistrazione</p>
-							<p class="card-text">@item.Tipologia</p>
-							<p class="card-text">@item.ColoreMantello</p>
-							<p class="card-text">@item.Datanascita</p>
-							<p class="card-text">@item.HasMicrochip</p>
-							<p class="card-text">@item.NumMicrochip</p>
-							<p class="card-text">@item.HasProprietario</p>
-							<p class="card-text">@item.IdUtente</p>
-						</div>
-						<div>
-							<a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Idanimale">Edit</a> |
-						<a class="btn btn-outline-primary" asp-action="Details" asp-route-id="@item.Idanimale">Details</a> |
-						<a class="btn btn-outline-primary" asp-action="Delete" asp-route-id="@item.Idanimale">Delete</a>
-						<a class="btn btn-outline-primary" asp-action="CronistoriaVisite" asp-controller="Visite" asp-route-id="@item.Idanimale">Visualizza Cronologia delle Visite</a>
-						</div>
-						
+					<div class="card-body">
+						<h5 class="card-title">@item.NomeAnimale</h5>
+						<p class="card-text">@item.Dataregistrazione</p>
+						<p class="card-text">@item.Tipologia</p>
+						<p class="card-text">@item.ColoreMantello</p>
+						<p class="card-text">@item.Datanascita</p>
+						<p class="card-text">@item.HasMicrochip</p>
+						<p class="card-text">@item.NumMicrochip</p>
+						<p class="card-text">@item.HasProprietario</p>
+						<p class="card-text">@item.IdUtente</p>
+					</div>
+					<div>
+						<a class="btn btn-info me-2" asp-action="Edit" asp-route-id="@item.Idanimale">Modifica</a>
+						<a class="btn btn-outline-info me-2" asp-action="Details" asp-route-id="@item.Idanimale">Dettagli</a>
+						<a class="btn btn-danger me-2" asp-action="Delete" asp-route-id="@item.Idanimale">Elimina</a>
+						<a class="btn btn-info" asp-action="CronistoriaVisite" asp-controller="Visite" asp-route-id="@item.Idanimale">Cronologia delle Visite</a>
+					</div>
 				</div>
 			</div>
 			}
-
-
-		
 	</div>
 </div>
 
