--- a/ClinicaVeterinaria/Views/Prodotti/Delete.cshtml
+++ b/ClinicaVeterinaria/Views/Prodotti/Delete.cshtml
@@ -4,42 +4,41 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Elimina Prodotto</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Sei sicuro di voler eliminare questo prodotto?</h3>
 <div>
-    <h4>Prodotti</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nomeprodotto)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-10 mb-3">
             @Html.DisplayFor(model => model.Nomeprodotto)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IsMedicinale)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.IsMedicinale)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PossibiliUsi)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.PossibiliUsi)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdDittaFornitriceNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.IdDittaFornitriceNavigation.IdDittaFornitrice)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdProdotto" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Elimina" class="btn btn-danger" /> |
+        <a class="btn btn-outline-success me-2" asp-action="Index">Lista Prodotti</a>
     </form>
 </div>
