--- a/ClinicaVeterinaria/Views/ProdottiInCassettoes/Create.cshtml
+++ b/ClinicaVeterinaria/Views/ProdottiInCassettoes/Create.cshtml
@@ -4,36 +4,32 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Aggiungi Prodotto nel cassetto</h1>
 
-<h4>ProdottiInCassetto</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="IdProdotto" class="control-label"></label>
                 <select asp-for="IdProdotto" class ="form-control" asp-items="ViewBag.IdProdotto"></select>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="IdCassetto" class="control-label"></label>
                 <select asp-for="IdCassetto" class ="form-control" asp-items="ViewBag.IdCassetto"></select>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Quantita" class="control-label"></label>
                 <input asp-for="Quantita" class="form-control" />
                 <span asp-validation-for="Quantita" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input class="btn btn-success me-2" type="submit" value="Aggiungi" />
+                <a class="btn btn-outline-success me-2" asp-action="Index">Lista Prodotti nel cassetto</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
