--- a/ClinicaVeterinaria/Views/ProdottiInCassettoes/Delete.cshtml
+++ b/ClinicaVeterinaria/Views/ProdottiInCassettoes/Delete.cshtml
@@ -4,36 +4,35 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Elimina Prodotto nel cassetto</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Sei sicuro di voler eliminare questa prodotto nel cassetto?</h3>
 <div>
-    <h4>ProdottiInCassetto</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Quantita)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.Quantita)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdCassettoNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.IdCassettoNavigation.IdCassetto)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdProdottoNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.IdProdottoNavigation.IdProdotto)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdProdottoInCassetto" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Elimina" class="btn btn-danger" /> |
+        <a class="btn btn-outline-success me-2" asp-action="Index">Lista Prodotti in cassetto</a>
     </form>
 </div>
