--- a/ClinicaVeterinaria/Views/ProdottiInCassettoes/Details.cshtml
+++ b/ClinicaVeterinaria/Views/ProdottiInCassettoes/Details.cshtml
@@ -4,33 +4,32 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Dettagli Prodotti in cassetto</h1>
 
 <div>
-    <h4>ProdottiInCassetto</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Quantita)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-10 mb-3">
             @Html.DisplayFor(model => model.Quantita)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdCassettoNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-10 mb-3">
             @Html.DisplayFor(model => model.IdCassettoNavigation.IdCassetto)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdProdottoNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-10 mb-3">
             @Html.DisplayFor(model => model.IdProdottoNavigation.IdProdotto)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdProdottoInCassetto">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-success me-2" asp-action="Edit" asp-route-id="@Model?.IdProdottoInCassetto">Modifica</a> |
+    <a class="btn btn-outline-success" asp-action="Index">Lista ditte</a>
 </div>
