--- a/ClinicaVeterinaria/Views/ProdottiInCassettoes/Edit.cshtml
+++ b/ClinicaVeterinaria/Views/ProdottiInCassettoes/Edit.cshtml
@@ -4,39 +4,35 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Modifica Prodotto nel cassetto</h1>
 
-<h4>ProdottiInCassetto</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdProdottoInCassetto" />
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="IdProdotto" class="control-label"></label>
                 <select asp-for="IdProdotto" class="form-control" asp-items="ViewBag.IdProdotto"></select>
                 <span asp-validation-for="IdProdotto" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="IdCassetto" class="control-label"></label>
                 <select asp-for="IdCassetto" class="form-control" asp-items="ViewBag.IdCassetto"></select>
                 <span asp-validation-for="IdCassetto" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Quantita" class="control-label"></label>
                 <input asp-for="Quantita" class="form-control" />
                 <span asp-validation-for="Quantita" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input class="btn btn-success me-2" type="submit" value="Modifica" />
+                <a class="btn btn-outline-success" asp-action="Index">Lista Prodotti in cassetto</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
