--- a/ClinicaVeterinaria/Views/Ricettemediche/Details.cshtml
+++ b/ClinicaVeterinaria/Views/Ricettemediche/Details.cshtml
@@ -4,39 +4,38 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Dettagli Ricetta</h1>
 
 <div>
-    <h4>Ricettemediche</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DataPrescrizione)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-10 mb-3">
             @Html.DisplayFor(model => model.DataPrescrizione)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Descrizione)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.Descrizione)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdUtenteNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.IdUtenteNavigation.IdUtente)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdVisitaNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.IdVisitaNavigation.IdVisita)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdricettaMedica">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-success me-2" asp-action="Edit" asp-route-id="@Model?.IdricettaMedica">Modifca</a>
+    <a class="btn btn-outline-success" asp-action="Index">Lista Ricette</a>
 </div>
