--- a/ClinicaVeterinaria/Views/Ricettemediche/Edit.cshtml
+++ b/ClinicaVeterinaria/Views/Ricettemediche/Edit.cshtml
@@ -4,44 +4,40 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Modifica Ricetta</h1>
 
-<h4>Ricettemediche</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdricettaMedica" />
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="IdVisita" class="control-label"></label>
                 <select asp-for="IdVisita" class="form-control" asp-items="ViewBag.IdVisita"></select>
                 <span asp-validation-for="IdVisita" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="IdUtente" class="control-label"></label>
                 <select asp-for="IdUtente" class="form-control" asp-items="ViewBag.IdUtente"></select>
                 <span asp-validation-for="IdUtente" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="DataPrescrizione" class="control-label"></label>
                 <input asp-for="DataPrescrizione" class="form-control" />
                 <span asp-validation-for="DataPrescrizione" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Descrizione" class="control-label"></label>
                 <input asp-for="Descrizione" class="form-control" />
                 <span asp-validation-for="Descrizione" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input class="btn btn-success me-2" type="submit" value="Modifica" />
+                <a class="btn btn-outline-success" asp-action="Index">Lista Ricette</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
