--- a/ClinicaVeterinaria/Views/Ricoveri/Delete.cshtml
+++ b/ClinicaVeterinaria/Views/Ricoveri/Delete.cshtml
@@ -13,50 +13,50 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Dataregistrazionericovero)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-10 mb-3">
             @Html.DisplayFor(model => model.Dataregistrazionericovero)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DataInizioRicovero)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.DataInizioRicovero)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DataFinericovero)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.DataFinericovero)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PrezzoGiornalieroRicovero)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.PrezzoGiornalieroRicovero)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IsRicoveroAttivo)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.IsRicoveroAttivo)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PrezzoTotaleRicovero)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.PrezzoTotaleRicovero)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdanimaleNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.IdanimaleNavigation.Idanimale)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdRicovero" />
-        <input type="submit" value="Elimina" class="btn btn-danger" /> |
-        <a asp-action="Index">Lista ricoveri</a>
+        <input type="submit" value="Elimina" class="btn btn-danger" />
+        <a class="btn btn-outline-info me-2" asp-action="Index">Lista Ricoveri</a>
     </form>
 </div>
