--- a/ClinicaVeterinaria/Views/Ricoveri/Edit.cshtml
+++ b/ClinicaVeterinaria/Views/Ricoveri/Edit.cshtml
@@ -12,45 +12,42 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdRicovero" />
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Dataregistrazionericovero" class="control-label"></label>
                 <input asp-for="Dataregistrazionericovero" class="form-control" />
                 <span asp-validation-for="Dataregistrazionericovero" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Idanimale" class="control-label"></label>
                 <select asp-for="Idanimale" class="form-control" asp-items="ViewBag.Idanimale"></select>
                 <span asp-validation-for="Idanimale" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="DataInizioRicovero" class="control-label"></label>
                 <input asp-for="DataInizioRicovero" class="form-control" />
                 <span asp-validation-for="DataInizioRicovero" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="DataFinericovero" class="control-label"></label>
                 <input asp-for="DataFinericovero" class="form-control" />
                 <span asp-validation-for="DataFinericovero" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="PrezzoGiornalieroRicovero" class="control-label"></label>
                 <input asp-for="PrezzoGiornalieroRicovero" class="form-control" />
                 <span asp-validation-for="PrezzoGiornalieroRicovero" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
+            <div class="form-group form-check mb-3">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="IsRicoveroAttivo" /> @Html.DisplayNameFor(model => model.IsRicoveroAttivo)
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Modifica" class="btn btn-primary" />
+                <input class="btn btn-info me-2" type="submit" value="Modifica" />
+                <a class="btn btn-outline-info" asp-action="Index">Lista Ricoveri</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Lista ricoveri</a>
 </div>
 
 @section Scripts {
