--- a/ClinicaVeterinaria/Views/Ricoveri/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Ricoveri/Index.cshtml
@@ -4,12 +4,14 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Lista Ricoveri</h1>
+<div class="d-flex justify-content-between align-items-center mb-3">
+    <h1 class="mb-0">Lista Ricoveri</h1>
+    <p class="mb-0">
+        <a asp-action="Create">Aggiungi ricovero</a>
+    </p>
+</div>
 
-<p>
-    <a asp-action="Create">Aggiungi ricovero</a>
-</p>
-<table class="table">
+<table class="table text-center table-hover border border-1">
     <thead>
         <tr>
             <th>
@@ -61,9 +63,9 @@
                 @Html.DisplayFor(modelItem => item.IdanimaleNavigation.Idanimale)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdRicovero">Modifica</a> |
-                <a asp-action="Details" asp-route-id="@item.IdRicovero">Dettagli</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdRicovero">Elimina</a>
+                <a class="btn btn-info me-2" asp-action="Edit" asp-route-id="@item.IdRicovero">Modifica</a>
+                <a class="btn btn-outline-info me-2" asp-action="Details" asp-route-id="@item.IdRicovero">Dettagli</a>
+                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.IdRicovero">Elimina</a>
             </td>
         </tr>
 }
