--- a/ClinicaVeterinaria/Views/Vendite/Details.cshtml
+++ b/ClinicaVeterinaria/Views/Vendite/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Dettagli Vendita</h1>
 
 <div>
     <h4>Vendite</h4>
@@ -13,30 +13,30 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Cf)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.Cf)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdProdottoNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.IdProdottoNavigation.IdProdotto)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdUtenteNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.IdUtenteNavigation.IdUtente)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdricettaMedicaNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.IdricettaMedicaNavigation.IdricettaMedica)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdVendita">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-success me-2" asp-action="Edit" asp-route-id="@Model?.IdVendita">Modifca</a>
+    <a class="btn btn-outline-success" asp-action="Index">Lista Vendite</a>
 </div>
