--- a/ClinicaVeterinaria/Views/Visite/Create.cshtml
+++ b/ClinicaVeterinaria/Views/Visite/Create.cshtml
@@ -4,30 +4,29 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Aggiungi Visita</h1>
 
-<h4>Visite</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="DataVisita" class="control-label"></label>
                 <input asp-for="DataVisita" class="form-control" />
                 <span asp-validation-for="DataVisita" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="Anamnesi" class="control-label"></label>
                 <input asp-for="Anamnesi" class="form-control" />
                 <span asp-validation-for="Anamnesi" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="DescrizioneCura" class="control-label"></label>
                 <input asp-for="DescrizioneCura" class="form-control" />
                 <span asp-validation-for="DescrizioneCura" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="IdAnimale" class="control-label"></label>
                 <select asp-for="IdAnimale" class ="form-control" asp-items="ViewBag.IdAnimale"></select>
             </div>
@@ -35,7 +34,7 @@
                 <label asp-for="IdRicetta" class="control-label"></label>
                 <select asp-for="IdRicetta" class ="form-control" asp-items="ViewBag.IdRicetta"></select>
             </div> *@
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <div class="checkbox">
                     <label>
                         <input type="checkbox" id="aggiungiRicetta" name="aggiungiRicetta" value="true" /> Aggiungi Ricetta Medica
@@ -48,26 +47,27 @@
                 <h3>Ricetta Medica:</h3>
 
                 <!-- Descrizione Ricetta -->
-                <div class="form-group">
+                <div class="form-group mb-3">
                     <label for="descrizioneRicetta">Descrizione Ricetta</label>
                     <textarea id="descrizioneRicetta" name="descrizioneRicetta" class="form-control"></textarea>
                 </div>
 
                 <!-- Seleziona Prodotti -->
-                <div class="form-group">
+                <div class="form-group mb-3">
                     <label for="prodottiId">Seleziona Prodotti:</label>
                     <select id="prodottiId" name="prodottiId[]" class="form-control" multiple asp-items="ViewBag.ProdottoId"></select>
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="PrezzoVisita" class="control-label"></label>
                 <input asp-for="PrezzoVisita" class="form-control" type="number" step="0.01"/>
                 <span asp-validation-for="PrezzoVisita" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Crea" class="btn btn-primary" />
+                <input type="submit" value="Aggiungi" class="btn btn-info me-2" />
+                <a class="btn btn-outline-info me-2" asp-action="Index">Lista Visite</a>
             </div>
         </form>
 
