--- a/ClinicaVeterinaria/Views/Visite/CronistoriaVisite.cshtml
+++ b/ClinicaVeterinaria/Views/Visite/CronistoriaVisite.cshtml
@@ -8,7 +8,7 @@
 
 @if (Model.Any())
 {
-    <table class="table">
+    <table class="table text-center table-hover border border-1">
         <thead>
             <tr>
                 <th>Data Visita</th>
