--- a/ClinicaVeterinaria/Views/Visite/Delete.cshtml
+++ b/ClinicaVeterinaria/Views/Visite/Delete.cshtml
@@ -4,54 +4,53 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Elimina</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Sei sicuro di voler eliminare questa visita?</h3>
 <div>
-    <h4>Visite</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DataVisita)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.DataVisita)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Anamnesi)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.Anamnesi)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DescrizioneCura)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.DescrizioneCura)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdAnimaleNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.IdAnimaleNavigation.Idanimale)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdRicettaNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.IdRicettaNavigation.IdricettaMedica)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PrezzoVisita)
         </dt>
-          <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.PrezzoVisita)
          </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdVisita" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Elimina" class="btn btn-danger" />
+        <a class="btn btn-outline-info me-2" asp-action="Index">Lista Visite</a>
     </form>
 </div>
