--- a/ClinicaVeterinaria/Views/Visite/Details.cshtml
+++ b/ClinicaVeterinaria/Views/Visite/Details.cshtml
@@ -4,51 +4,50 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Dettagli Visita</h1>
 
 <div>
-    <h4>Visite</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DataVisita)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.DataVisita)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Anamnesi)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.Anamnesi)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DescrizioneCura)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.DescrizioneCura)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdAnimaleNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.IdAnimaleNavigation.Idanimale)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdRicettaNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
             @Html.DisplayFor(model => model.IdRicettaNavigation.IdricettaMedica)
         </dd>
         <dt class = "col-sm-2">
           @Html.DisplayNameFor(model => model.PrezzoVisita)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10 mb-3">
           @Html.DisplayFor(model => model.PrezzoVisita)
        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdVisita">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-info me-2" asp-action="Edit" asp-route-id="@Model?.IdVisita">Modifica</a>
+    <a class="btn btn-outline-info" asp-action="Index">Lista Visite</a>
 </div>
