Update-Details-Delete-Edit Utente, Upload image for utente

--- a/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
+++ b/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 
 @{
     var userName = User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.Name)?.Value;
+    var userId = User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.NameIdentifier)?.Value;
 }
 
 <!DOCTYPE html>
@@ -15,6 +16,7 @@
     <link rel="stylesheet" href="~/ClinicaVeterinaria.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    @RenderSection("Head", required: false)
 </head>
 <body>
     <header>
@@ -116,7 +118,7 @@
                                     </span>
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownAccount">
-                                    <li><a class="dropdown-item" asp-controller="Account" asp-action="Profile">Profilo</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Utenti" asp-action="Details" asp-route-id=@userId>Profilo</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item text-danger" asp-controller="Login" asp-action="LogOut">Log-Out</a></li>
                                 </ul>
