--- a/ClinicaVeterinaria/Views/Prodotti/Create.cshtml
+++ b/ClinicaVeterinaria/Views/Prodotti/Create.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group mb-3">
                 <label asp-for="Nomeprodotto" class="control-label"></label>
@@ -34,6 +34,12 @@
                 <label asp-for="PossibiliUsi" class="control-label"></label>
                 <input asp-for="PossibiliUsi" class="form-control" />
                 <span asp-validation-for="PossibiliUsi" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="FotoProdotto" class="control-label"></label>
+                <input type="file" name="uploadedImage" class="form-control" />
+                <span asp-validation-for="FotoProdotto" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input class="btn btn-success me-2" type="submit" value="Aggiungi" />
