--- a/ClinicaVeterinaria/Views/Prodotti/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Prodotti/Index.cshtml
@@ -21,7 +21,7 @@
     {
         <div class="col-md-3 mb-3">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="@Url.Content("~/images/prodotti/" + item.FotoProdotto)" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">@item.Nomeprodotto</h5>
                     <p class="card-text">Prezzo: @item.Prezzo</p>
